# IBE

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  build.sh  client.json  doxyfile  init_client.json  init_server.json  instruction.md  log.md  protocol.md  question.md  schedule.md  server.cfg  server.json  trap.md
doc/: main.tex
docs/: code_conventions.md  guide.md  instruction.md  python_guide.md  question.md  theory.md
docs/design/: app.md  init.md
example/bc/: top_user_list.json
example/bc/baidu.com/: client.json
example/bc/cn/: init_server.json
example/bc/com/: init_server.json
example/bc/edu.cn/: client.json
example/bc/ustc.edu.cn/: client.json
example/comm/: README.md  top_user_list.json
example/comm/client1/: client.json
example/comm/client10/: client.json
example/comm/client11/: client.json
example/comm/client2/: client.json
example/comm/client3/: client.json
example/comm/client4/: client.json
example/comm/client5/: client.json
example/comm/client6/: client.json
example/comm/client7/: client.json
example/comm/client8/: client.json
example/comm/client9/: client.json
example/comm/server1/: init_server.json
example/comm/server2/: init_server.json
example/init/: top_user_list.json
example/init/server1/: init_server.json
example/init/server2/: init_server.json
example/init/server3/: init_server.json
example/interface_test/: top_user_list.json
example/interface_test/client/: client.json
example/interface_test/server1/: init_server.json
example/interface_test/server2/: init_server.json
example/sk/: README.md
example/sk/client/: client.json
example/sk/server1/: init_server.json
example/sk/server2/: init_server.json
python/: client.py  kgc.py  run.py  server.py  user.py
python/entity/: aes.py  crypto.cfg  crypto.py
python/network/: Packer.py  network.py  packet.py
python/users/: Base.py  Client.py  KGC.py  Server.py
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/BasicIdent_FullIdent/: Makefile  bf_4_1_unittest  bf_4_2_unittest  diff.txt
src/IBE/: CMakeLists.txt  Makefile  bf_4_1.c  bf_4_1.h  bf_4_2.c  utils.c  utils.h
src/app/: CMakeLists.txt  aes.h  back.c  client.cpp  decrypt.c  decrypt_aes.c  encrypt.c  encrypt_aes.c  extract.c  init-client.cpp  init-server.cpp  init.c  main.c  main.h  server.cpp  setup.c  ui.cpp  user.cpp
src/comm/: .base.c.swp  .core.c.swp  CMakeLists.txt  Client.cpp  Client.h  ClientMain.cpp  Common.h  Makefile  README.md  Server.cpp  Server.h  ServerMain.cpp  base.c  base.h  client_server.c  client_server.h  comm.c  comm.cpp  comm_lcl.h  comm_lcl.hpp  comm_user.cpp  connection.c  core.c  depend.h  handle.c  handle.h  listener_run.cpp  main.c  main.cpp  protocol  protocol.md  run_listen_core.cpp  server.h  server_core.c  utils.c
src/comm/Client/: client.c  client.h  client_connection.c  client_core.c
src/comm/Server/: server.c  server.h  server_connection.c  server_core.c
src/crypto/: CMakeLists.txt  IBE.c  README.md  cbc.c  crypto.h  ibe_bn.c  ibe_decrypt.c  ibe_ec.c  ibe_encrypt.c  ibe_err.h  ibe_extract.c  ibe_extract_sign.c  ibe_id2point.c  ibe_id2point_init.c  ibe_lcl.h  ibe_lib.c  ibe_point.c  ibe_setup.c  ibe_setup_sign.c  ibe_sign.c  ibe_verify.cpp  id_init.c  sm3.c  sm4.c  sm9.c  sm9_lcl.h  smx_lcl.h
src/crypto/ss/: ss.h  ss_num.c
src/func/: core.c  main.c
src/include/: app.hpp  base.h  byte.hpp  client.h  comm.h  comm.hpp  config.h  crypto.h  ctx.h  ds.h  ds.hpp  func.h  ibe.h  init.hpp  interface.hpp  packet.h  packet.hpp  ss.h  sys.h  ui.hpp  user.hpp  utils.h  utils.hpp
src/include/openssl/: ec.h  opensslconf.h  sm4.h  sm9.h  sms4.h  smx.h
src/init/: calculation.cpp  init_lcl.hpp  init_lib.cpp  init_user.cpp  initializer.cpp  run.cpp
src/lib/: libcrypto.pc  libcrypto.so.1.1  libssl.pc  libssl.so.1.1
src/lib/back2/: libssl.pc
src/packet/: free_temp.cpp  handle_ap.c  handle_ap.cpp  handle_dec.c  handle_dec.cpp  handle_m.c  handle_sp.c  handle_sp.cpp  handle_verify.c  handle_verify.cpp  packet.cpp  packet_handle.c  packet_handle.cpp  packet_init.cpp  packet_lcl.hpp  packet_send.c  packet_send.cpp  packet_user.cpp  send_ap.c  send_ap.cpp  send_enc.c  send_enc.cpp  send_sign.c  send_sign.cpp  send_sp.c  send_sp.cpp
src/python/: action.py  auth.py  cache.py  client.py  cloud.py  constant.py  crypto_c_interface.py  init.py  interface_test.py  key.py  mpk  msk  packet.py  restAPI.py  server.py  tcp_interface.py  user.py  utils.py
src/python/entity/: commands.py  crypto.py  enums.py
src/python/network/: network.py
src/src/: Makefile  cmake_install.cmake
src/src/test/: Makefile  cmake_install.cmake
src/ss/: ss.c  ss_lcl.h  ss_num.c
src/sys/: ds.c  get_cfg_doc.cpp  get_id_from_doc.cpp  get_id_from_val.cpp  ini.c  sys_id2point.c  sys_lib.c  sys_pp.c  sys_setup.c  utils.c
src/test/: CMakeLists.txt  cbctest.c  clienttest.c  clienttest.cpp  crypto.c  id2pointtest.c  servertest.c  servertest.cpp  sm2test.c  sm4test.c  sm9test.c  smxtest.c  sstest.c  sstest.cpp  test_ibe.sh  usertest.cpp
src/test/comm/: CMakeLists.txt  clienttest.c  servertest.c
src/test/crypto/: CMakeLists.txt  ectest.c  sstest.c
src/test/wrk/: U_wrk  V_wrk  pairing.conf  point.conf  private.conf  public.conf  sk_wrk
src/ui/: ui.cpp
src/user/: add_client.cpp  add_other_cfg.cpp  add_thread.cpp  bind_objects.cpp  client.cpp  core.cpp  delete_client.cpp  delete_thread.cpp  get_id_from_doc.cpp  get_signdata.cpp  run.cpp  server.cpp  ui.cpp  user.cpp  user_comm.cpp  user_lcl.hpp
test/scripts/: gprof.sh
